# theatron

./: .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  codecov.yml  deny.toml
.github/workflows/: ci.yml
examples/lorawan_file_transfer/: file_fragmenter.rs  lorawan_adapter.rs  main.rs  network_server.rs  periodic_interferer.rs  prng.rs  simulated_radio.rs
src/: channel.rs  lib.rs  main.rs  metrics.rs  scheduler.rs  time.rs  traits.rs  types.rs
tests/: lorawan_file_transfer.rs  lorawan_frame_correctness.rs
