[package]
name = "theatron"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "MIT OR Apache-2.0"
authors = ["Dominic Burkart"]
description = "Simulation framework for evaluating and comparing wireless protocol implementations under network-level effects"
repository = "https://github.com/DominicBurkart/theatron"
keywords = ["lora", "lorawan", "protocol", "simulation", "wireless"]
categories = ["simulation", "network-programming"]

[[bin]]
name = "theatron"
path = "src/main.rs"

[[example]]
name = "lorawan_file_transfer"
path = "examples/lorawan_file_transfer/main.rs"

[dependencies]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
lorawan-device = { version = "0.12", features = ["default-crypto"] }
lorawan = { version = "0.9", default-features = false, features = ["default-crypto"] }
lora-modulation = "0.1"
proptest = "1"
rand_core = { version = "0.6", default-features = false }

[profile.release]
lto = true
codegen-units = 1
