[package]
name = "theatron"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "MIT OR Apache-2.0"
authors = ["Dominic Burkart"]
description = "Simulation framework for evaluating and comparing wireless protocol implementations under network-level effects"
repository = "https://github.com/DominicBurkart/theatron"
keywords = ["lora", "lorawan", "protocol", "simulation", "wireless"]
categories = ["simulation", "network-programming"]

[[bin]]
name = "theatron"
path = "src/main.rs"

[[example]]
name = "lorawan_file_transfer"
path = "examples/lorawan_file_transfer/main.rs"

[dependencies]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
lorawan-device = { git = "https://github.com/lora-rs/lora-rs", rev = "597beac2a7774bd98874f1e5abfa9ac62eface81" }
lorawan = { git = "https://github.com/lora-rs/lora-rs", rev = "597beac2a7774bd98874f1e5abfa9ac62eface81", package = "lorawan" }
lora-modulation = { git = "https://github.com/lora-rs/lora-rs", rev = "597beac2a7774bd98874f1e5abfa9ac62eface81" }
proptest = "1"
rand_core = { version = "0.6", default-features = false }

[profile.release]
lto = true
codegen-units = 1
